--- a/packages/web/src/components/Sidebar/Sidebar.module.scss
+++ b/packages/web/src/components/Sidebar/Sidebar.module.scss
@@ -28,7 +28,7 @@
   :global(.sidebar-hide) & {
     display: none;
   }
-  
+
   @include scroll-bar($sidebar-scrollbar-bg);
 
 
@@ -51,16 +51,13 @@
 
 .logo {
   margin: 20px 0 55px;
-  font-size: 18px;
-  width: 100%;
-  font-weight: $font-weight-thin;
-  text-align: center;
 
   a {
-    color: $logo-color;
     padding: 0 5px;
-    text-decoration: none;
-    white-space: nowrap;
+
+    img {
+      width: 124px;
+    }
   }
 }
 
