feat: Add 'Detailed Physical Analysis' page

--- a/packages/web/src/pages/physical-analysis/detailed-dashboard/components/calendar/Calendar.module.scss
+++ b/packages/web/src/pages/physical-analysis/detailed-dashboard/components/calendar/Calendar.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/app';
+@import '../../../../../styles/app';
 
 .calendarRectangle {
   width: 100%;
@@ -47,7 +47,7 @@
       .headerText {
         flex: 5;
         display: flex;
-        
+
         .todayLabel {
           flex: 1;
           font-size: 0.8em;
@@ -92,7 +92,7 @@
       height: 15%;
     }
   }
-} 
+}
 
 
 .calendarItemContainer {
