--- a/packages/web/src/pages/physical-analysis/detailed-dashboard/DetailedDashboard.module.scss
+++ b/packages/web/src/pages/physical-analysis/detailed-dashboard/DetailedDashboard.module.scss
@@ -23,6 +23,47 @@
   }
 }
 
+.constructionDropdownToggle {
+  display: flex;
+  align-items: center;
+
+  background: $main-gradient !important;
+
+  > i {
+    margin-top: -3px;;
+    margin-left: 0.64rem;
+  }
+}
+
+.constructionDropdownMenu {
+  background: $main-gradient !important;
+  box-shadow: 0 0px 40px 2px rgba(#020202,.5);
+  border: none;
+  color: $white;
+
+  &.messages {
+    left: -50px !important;
+  }
+
+  @media (max-width: breakpoint-max(xs)) {
+    right: auto;
+    left: -100px;
+  }
+
+  &::after {
+    left: auto !important;
+    right: 15px;
+
+    @media (max-width: breakpoint-max(xs)) {
+      right: 112px;
+    }
+  }
+
+  :global(.show) > & {
+    display: block;
+  }
+}
+
 .table {
   :global(.table.table-sm) {
     td {
