--- a/packages/web/src/styles/_utils.scss
+++ b/packages/web/src/styles/_utils.scss
@@ -76,8 +76,8 @@ $z-index-variants: (more: 1, less: -1, '10': 10, '-10': -10);
   &.circle-o-info { border-color: theme-color('info') };
   &.circle-o-primary { border-color: theme-color('primary') };
   &.circle-o-black { border-color: $black };
-  &.circle-o-gray-darker { border-color: $gray-900 };
-  &.circle-o-gray-dark { border-color: $gray-800 };
+  &.circle-o-gray-darkerer { border-color: $gray-900 };
+  &.circle-o-gray-darker { border-color: $gray-800 };
   &.circle-o-gray { border-color: $gray-700 };
   &.circle-o-gray-light { border-color: $gray-600 };
   &.circle-o-gray-lighter { border-color: $gray-200 };
@@ -210,7 +210,7 @@ $z-index-variants: (more: 1, less: -1, '10': 10, '-10': -10);
 @include bg-variant('.bg-body-light', $body-bg-light);
 @include bg-variant('.bg-gray', $gray-700);
 @include bg-variant('.bg-gray-transparent', rgba($gray-700, 0.6));
-@include bg-variant('.bg-gray-dark', $gray-800);
+@include bg-variant('.bg-gray-darker', $gray-800);
 @include bg-variant('.bg-black', $black);
 @include bg-variant('.bg-gray-light', $gray-600);
 @include bg-variant('.bg-gray-lighter', $gray-200);
@@ -247,10 +247,10 @@ $z-index-variants: (more: 1, less: -1, '10': 10, '-10': -10);
 @include text-emphasis-variant('.text-link', $link-color);
 @include text-emphasis-variant('.text-white', rgba($white,.9));
 @include text-emphasis-variant('.text-gray', $gray-700);
-@include text-emphasis-variant('.text-gray-dark', $gray-800);
+@include text-emphasis-variant('.text-gray-darker', $gray-800);
 @include text-emphasis-variant('.text-gray-light', $gray-600);
 @include text-emphasis-variant('.text-semi-muted', $gray-600);
-@include text-emphasis-variant('.text-gray-darker', $gray-900);
+@include text-emphasis-variant('.text-gray-darkerer', $gray-900);
 @include text-emphasis-variant('.text-gray-lighter', $gray-200);
 @include text-emphasis-variant('.text-bg-sidebar', $sidebar-bg-color);
 
