--- a/packages/web/src/styles/_base.scss
+++ b/packages/web/src/styles/_base.scss
@@ -26,10 +26,12 @@
 }
 
 .form-control {
-  color: $content-color;
+  color: $text-darker;
+
   &:focus,&:active {
-    color: $content-color;
+    color: $text-darker;
   }
+
   &.input-transparent {
     border: none;
     color: $text-color;
@@ -39,11 +41,14 @@
 
     &:active,
     &:focus {
-      background-color: $bg-custom-dark !important;
+      background-color: $widget-bg-color !important;
 
       @include box-shadow(inset 0 1px 1px rgba(0,0,0,0.2));
     }
 
+    &::placeholder {
+      color: $text-light;
+    }
 
     &[disabled],
     &[readonly],
@@ -236,7 +241,7 @@ table > thead > tr > th {
   margin: -1px -1px calc(#{$grid-gutter-width} - 1px) -1px;
 }
 
-.sortable-chosen { 
+.sortable-chosen {
   opacity: 1!important
 }
 
